--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/auth/.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
